Openshift/myjenkins.yaml
apiVersion: v1
kind: Pod
metadata:
   name: tomcat-jenkins
spec:
   containers:
    - name: tomcat
      image: raviteja101/new-tomcat
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
