Openshift/pod-tomcat-mongoDB.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-mysql
  labels:
    app: tomcat-mysql
    app: tomcat-mysql
  namespace: dacpac
spec: 
  containers:
    - name: tomcat
      image: tomcat:8.0
      ports:
        - containerPort: 8080
          protocol: TCP
      imagePullPolicy: Always
    - name: mysql
      image: mysql/mysql-server:latest
      command:
        - "/entrypoint.sh mysqld"
      ports:
        - containerPort: 8081
          protocol: TCP
      imagePullPolicy: Always
